--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -54,9 +54,11 @@
     <Compile Include="DTOs\StudentParentDTO.cs" />
     <Compile Include="DTOs\StudentRecordDTO.cs" />
     <Compile Include="DTOs\StudentScheduleDTO.cs" />
+    <Compile Include="DTOs\TokenDTO.cs" />
     <Compile Include="DTOs\UserDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AttendenceService.cs" />
+    <Compile Include="Services\AuthService.cs" />
     <Compile Include="Services\ParentService.cs" />
     <Compile Include="Services\ScheduleService.cs" />
     <Compile Include="Services\StudentRecordService.cs" />
