--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -58,8 +58,10 @@
     <Compile Include="EF\Tables\Schedule.cs" />
     <Compile Include="EF\Tables\Student.cs" />
     <Compile Include="EF\Tables\StudentRecord.cs" />
+    <Compile Include="EF\Tables\Token.cs" />
     <Compile Include="EF\Tables\User.cs" />
     <Compile Include="Interfaces\IAttendenceFeature.cs" />
+    <Compile Include="Interfaces\IAuth.cs" />
     <Compile Include="Interfaces\IParentFeature.cs" />
     <Compile Include="Interfaces\IRepo.cs" />
     <Compile Include="Interfaces\IScheduleFeatures.cs" />
@@ -72,6 +74,10 @@
     <Compile Include="Migrations\202501212102432_no.Designer.cs">
       <DependentUpon>202501212102432_no.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202501212228526_auth.cs" />
+    <Compile Include="Migrations\202501212228526_auth.Designer.cs">
+      <DependentUpon>202501212228526_auth.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\AttendenceRepo.cs" />
@@ -80,6 +86,7 @@
     <Compile Include="Repos\ScheduleRepo.cs" />
     <Compile Include="Repos\StudentRecordRepo.cs" />
     <Compile Include="Repos\StudentRepo.cs" />
+    <Compile Include="Repos\TokenRepo.cs" />
     <Compile Include="Repos\UserRepo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -92,6 +99,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202501212102432_no.resx">
       <DependentUpon>202501212102432_no.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501212228526_auth.resx">
+      <DependentUpon>202501212228526_auth.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
